--- a/Donné/app/src/main/res/layout/register.xml
+++ b/Donné/app/src/main/res/layout/register.xml
@@ -2,43 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ECEFF1"
-
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_margin="10dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="16dp"
-                    android:weightSum="1">
+                    android:background="@color/colorPrimary"
+                     android:weightSum="1">
 
 
                     <TextView
                         android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:text="Join NeedBlood Network"
+                        android:gravity="center"
+                        android:text="Join Donné Network"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:textColor="#2E7D32"
+                        android:textColor="#fff"
                         android:textStyle="bold" />
 
                     <com.wrapp.floatlabelededittext.FloatLabeledEditText
@@ -49,7 +53,7 @@
                             android:id="@+id/editText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="3dp"
+                            android:layout_marginBottom="5dp"
                             android:ems="10"
                             android:hint="Name"
 
@@ -64,7 +68,7 @@
                             android:id="@+id/editText2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="3dp"
+                            android:layout_marginBottom="5dp"
                             android:ems="10"
                             android:hint="Email"
                             android:inputType="textEmailAddress" />
@@ -89,7 +93,7 @@
                             android:id="@+id/editText3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="3dp"
+                            android:layout_marginBottom="5dp"
                             android:ems="10"
                             android:hint="Phone Number"
                             android:inputType="phone" />
@@ -103,7 +107,7 @@
                             android:id="@+id/editText4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="3dp"
+                            android:layout_marginBottom="5dp"
                             android:ems="10"
                             android:hint="Blood Type" />
                     </com.wrapp.floatlabelededittext.FloatLabeledEditText>
@@ -116,7 +120,7 @@
                             android:id="@+id/editText7"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="3dp"
+                            android:layout_marginBottom="5dp"
                             android:ems="10"
                             android:hint="Password"
                             android:inputType="textPassword" />
@@ -128,7 +132,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:layout_marginTop="5dp"
-
                         android:spinnerMode="dropdown" />
 
 
@@ -139,7 +142,6 @@
                         android:layout_marginBottom="3dp"
                         android:layout_marginTop="5dp"
                         android:background="@color/colorPrimary"
-
                         android:text="Register"
                         android:textColor="#fff" />
 
@@ -148,7 +150,7 @@
             </android.support.v7.widget.CardView>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </ScrollView>
 </LinearLayout>
