--- a/Donné/app/src/main/res/layout/app_bar_main.xml
+++ b/Donné/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.ieee.donne.Main.MainActivity">
+    tools:context="ieee.donn.Main.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
